// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно рисует компонент 1`] = `
<Connect(InfoBubbleDumb)
  className="PlacementAutoProlongationInactiveNotice "
  title="Продление выключено"
>
  <div>
    Включите продление, иначе через 
    <DaysLeft
      className=""
      timestamp={1561965602587}
      type="no-prefix"
    />
     объявление будет снято с публикации. 
  </div>
  <Button
    className="PlacementAutoProlongationInactiveNotice__button"
    color="blue"
    size="m"
    type="button"
    width="default"
  >
    Включить продление
  </Button>
</Connect(InfoBubbleDumb)>
`;

exports[`правильно рисует компонент для мобилки 1`] = `
<Connect(InfoBubbleDumb)
  className="PlacementAutoProlongationInactiveNotice "
  title="Продление выключено"
>
  <div>
    Включите продление, иначе через 
    <DaysLeft
      className=""
      timestamp={1561965602587}
      type="no-prefix"
    />
     объявление будет снято с публикации. 
  </div>
  <Button
    className="PlacementAutoProlongationInactiveNotice__button"
    color="blue"
    size="m"
    type="button"
    width="full"
  >
    Включить продление
  </Button>
</Connect(InfoBubbleDumb)>
`;
